plugins {
    id 'java'
    id 'application'
    id 'org.beryx.jlink' version '2.26.0'
}

group = 'turbowin'
version = '4.7'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.fazecast:jSerialComm:2.11.0'
    implementation 'org.eclipse.angus:smtp:2.0.3'

    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.assertj:assertj-swing-junit:3.17.1'
}

sourceSets {
    main {
        java {
            srcDirs += "$buildDir/generated/source/appinfo/java"
        }
    }
}

jar {
    manifest {
        attributes(
            'Main-Class': 'turbowin.main'
        )
    }
}

application {
    mainModule.set('turbowin')
    mainClass.set('turbowin.main')
}

jlink {
    launcher {
        name = 'turbowin'
    }
    options = ['--strip-debug', '--compress', 'zip-6', '--no-header-files', '--no-man-pages']
}

task generateAppInfoJava {
    doLast {
        def generatedSourceDir = file("$buildDir/generated/source/appinfo/java")
        generatedSourceDir.mkdirs()

        def javaFile = new File(generatedSourceDir, "TurboWinAppInfo.java")
        javaFile.text = """\
            package turbowin;

            public class TurboWinAppInfo {
                public static final String APPLICATION_VERSION = "${project.version} [${System.getProperty("sun.arch.data.model")}-bit] (build ${new Date().format('d-MMMM-yyyy')})";  // is tested for substring "[64-bit]" 
            }
        """
    }
}

compileJava.dependsOn generateAppInfoJava

processResources.dependsOn generateAppInfoJava

tasks.jlink.doLast {
    copy {
        from('src/main/resources/turbowin/help_files')
        into file("$buildDir/image/help")
    }
}

task printVersion {
    doLast {
        println project.version
    }
}

test {
    jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
}
